# watermark

./: .gitignore  .pep8speaks.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  appveyor.yml  requirements.txt  setup.cfg  setup.py  watermark.py
.github/workflows/: publish.yaml  python-package-pip.yml
binder/: requirements.txt
ci/: .travis_install.sh  .travis_test.sh
doc/.ipynb_checkpoints/: watermark-checkpoint.ipynb
docs/: watermark.ipynb
docs/.ipynb_checkpoints/: watermark-checkpoint.ipynb
watermark/: __init__.py  magic.py  magick.py  version.py  watermark.py
watermark/tests/: test_html_export.py  test_watermark.py  test_watermark_gpu.py
