[metadata]
version = 2.2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
